tests/ui/index-unsupported.stderr
error: Unsupported index type: blah
 --> tests/ui/index-unsupported.rs
  |
  |     #[cipherstash(query = "blah")]
  |                           ^^^^^^
